# finger-tracking

./: CNAME  index.md
cv-version-fingers/: CMakeCache.txt  Makefile  OpenCVTest  cmake_install.cmake
cv-version-fingers/test/: CMakeLists.txt  test.cpp
cv-version-gearvr/Hand Tracking Demo/Assets/Scenes/: main.unity
cv-version-gearvr/Hand Tracking Demo/ProjectSettings/: ProjectSettings.asset
cv-version-hand/: main.py
cv-version-sockets/Python/: Recognition.py
